Edited employee modal and fixed station adding mechanism. Also added new Shift modal without css and JS

--- a/static/css/employee.css
+++ b/static/css/employee.css
@@ -181,6 +181,28 @@
     background-color: #696190;
 }
 
+.test-select{
+    width: 160px;
+    height: 28px;
+    border: none;
+    border-radius: 3px;
+    background-color: rgb(224, 224, 224);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.test-select:focus{
+    outline: none;
+}
+
+.select_option{
+    color: rgb(114, 114, 114);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+}
+
 /*############ filter-section end ##############*/
 
 /************ table-section start **************/
@@ -271,7 +293,7 @@ tr:hover{
     display: flex;
     width: 100%;
     justify-content: flex-end;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .modal-labels{
@@ -283,6 +305,11 @@ tr:hover{
 
 .modal_inputs{
     height: 30px;
+    font-size: 14px;
+    padding-left: 5px;
+    border: none;
+    border-radius: 3px;
+    background-color: rgb(224, 224, 224);
 }
 
 #new-token{
@@ -290,7 +317,7 @@ tr:hover{
 }
 
 #new-name{
-    width: 250px;
+    width: 350px;
 }
 
 #new-gender{
@@ -298,20 +325,36 @@ tr:hover{
 }
 
 #new-contact{
-    width: 140px;
-}
-
-#new-station{
-    width: 250px;
+    width: 170px;
 }
 
 #new-doj{
-    width: 145px;
+    width: 170px;
+}
+
+#new-role{
+    width: 135px;
+}
+
+#new-shift{
+    width: 135px;
+}
+
+#new-language{
+    width: 135px;
+}
+
+#new-weeklyOff{
+    width: 135px;
+}
+
+#emp-station-modal{
+    width: 250px;
 }
 
 #emp-modal-box-id{
-    height: 250px;
-    width: 600px;
+    height: 305px;
+    width: 700px;
 }
 
 #stage-modal-box-id{
@@ -339,7 +382,7 @@ tr:hover{
     color: white;
     border-radius: 3px;
     margin-right: 10px;
-    width: 80px;
+    width: 120px;
 }
 
 .modalCancelBtn:hover{
@@ -347,7 +390,7 @@ tr:hover{
 }
 
 .modalSubmitBtn{
-    width: 80px;
+    width: 120px;
     height: 32px;
     border: 0;
     box-shadow: none;
